fix(Nav): overflow when icon-only without icon

--- a/src/nav/main.scss
+++ b/src/nav/main.scss
@@ -2,6 +2,8 @@
 @import "scss/mixin";
 @import "scss/variable";
 
+$nav-icononly-width: $s-15;
+
 #{$nav-prefix} {
     @include box-sizing;
     min-width: auto;
@@ -18,8 +20,10 @@
 
     &-icon-placeholder {
         display: inline-block;
-        width: $nav-icon-self-size;
-        height: $nav-icon-self-size;
+        width: $nav-icon-only-font-size;
+        height: $nav-icon-only-font-size;
+        margin-left: ($nav-icononly-width - $nav-icon-only-font-size) / 2 - $nav-ver-item-padding-lr - $nav-primary-border-width;
+        margin-right: ($nav-icononly-width - $nav-icon-only-font-size) / 2 - $nav-ver-item-padding-lr - $nav-primary-border-width;
     }
 
     &-group-label {
@@ -318,18 +322,31 @@
             #{$nav-prefix}-icon.#{$css-prefix}icon {
                 @include icon-size(
                     $size: $nav-icon-only-font-size,
-                    $marginLeft: (18px - $nav-icon-only-font-size) / 2,
-                    $marginRight: (18px - $nav-icon-only-font-size) / 2
+                    $marginLeft: ($nav-icononly-width - $nav-icon-only-font-size) / 2 - $nav-ver-item-padding-lr - $popup-local-border-width,
+                    $marginRight: ($nav-icononly-width - $nav-icon-only-font-size) / 2 - $nav-ver-item-padding-lr - $popup-local-border-width
                 );
             }
         }
-        #{$nav-prefix}-icon.#{$css-prefix}icon {
-            @include icon-size(
-                $size: $nav-icon-only-font-size,
-                $marginLeft: (20px - $nav-icon-only-font-size) / 2,
-                $marginRight: (20px - $nav-icon-only-font-size) / 2
-            );
+
+        &.#{$css-prefix}primary {
+            #{$nav-prefix}-icon.#{$css-prefix}icon {
+                @include icon-size(
+                    $size: $nav-icon-only-font-size,
+                    $marginLeft: ($nav-icononly-width - $nav-icon-only-font-size) / 2 - $nav-ver-item-padding-lr - $nav-primary-border-width,
+                    $marginRight: ($nav-icononly-width - $nav-icon-only-font-size) / 2 - $nav-ver-item-padding-lr - $nav-primary-border-width
+                );
+            }
         }
+        &.#{$css-prefix}secondary {
+            #{$nav-prefix}-icon.#{$css-prefix}icon {
+                @include icon-size(
+                    $size: $nav-icon-only-font-size,
+                    $marginLeft: ($nav-icononly-width - $nav-ver-item-padding-lr * 2 - $nav-secondary-border-width * 2 - $nav-icon-only-font-size) / 2,
+                    $marginRight: ($nav-icononly-width - $nav-ver-item-padding-lr * 2 - $nav-secondary-border-width * 2 - $nav-icon-only-font-size) / 2
+                );
+            }
+        }
+
 
         #{$nav-prefix}-icon-only-arrow.#{$css-prefix}icon {
             @include icon-size(
